close to pdf export, need to resolve scrollbar issues

--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,4 @@
 #x Change control names; "MaxCtrl" still ambiguous. Move to "MaxReadout" or something. - Added tooltip
 #x Well tooltip should transform toward the center of the plate based on quadrant; it'll slam up against the side, compressing the information within.
 #x In Data Parser, selecting a protocol, uploading a file, removing file, and changing protocol prevents uploading to new protocol?
+# Need to find a better way to do DMSO solvent. Right now the Excel sheet doesn't automatically come with a DMSO pattern. Why bother putting it in at all? Shouldn't the validation step just insert the pattern for you?
