--- a/todo.txt
+++ b/todo.txt
@@ -13,3 +13,4 @@
 # When changing plate size in Protocol Manager, if going to a smaller size and controls are outside the limit, get an error
 # Trim pattern and cpd names from input sheet for trailing white spaces
 # Uploading data files under wrong protocol just silently fails
+# Remove TransferStep from EchoCalculatorClass, consolidate to TransferStepExport in plateUtils
